--- a/project.config.json
+++ b/project.config.json
@@ -1,15 +1,15 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
-		"postcss": false,
+		"postcss": true,
 		"minified": true
 	},
 	"compileType": "weapp",
-	"libVersion": "1.5.2",
+	"libVersion": "1.5.4",
 	"appid": "wxec6d8b41efefb82c",
-	"projectname": "007search",
+	"projectname": "%E9%9B%B6%E4%BB%B6%E5%8A%A9%E6%89%8B",
 	"condition": {
 		"weapp": {
 			"current": -1,
